--- a/src/components/upperBanner/upperBanner.module.scss
+++ b/src/components/upperBanner/upperBanner.module.scss
@@ -1,7 +1,8 @@
 
 .main {
   width: 100%;
-  height: 300px;
+  margin-top: 250px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-items: center;
