--- a/src/components/effects/verticalBar/verticalBar.module.scss
+++ b/src/components/effects/verticalBar/verticalBar.module.scss
@@ -1,8 +1,16 @@
 
 
 .main {
-  background-color: black;
-  height: 30px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  .bar {
+    background-color: black;
+    width: 100%;
+    height: 30px;
+  }
 }
 
 
