--- a/src/components/effects/verticalBar/verticalBar.module.scss
+++ b/src/components/effects/verticalBar/verticalBar.module.scss
@@ -7,9 +7,14 @@
   justify-content: center;
   text-align: center;
   .bar {
+    padding-top: 5px;
     background-color: black;
     width: 100%;
     height: 30px;
+    text-align: center;
+    .text {
+      color: white;
+    }
   }
 }
 
