--- a/src/components/upperBanner/upperBanner.module.scss
+++ b/src/components/upperBanner/upperBanner.module.scss
@@ -1,13 +1,18 @@
 
 .main {
   width: 100%;
-  margin-top: 250px;
-  height: 200px;
+  margin-top: 200px;
+  height: 280px;
   display: flex;
   flex-direction: column;
   justify-items: center;
   justify-content: center;
   align-items: center;
+  .init {
+    margin-bottom: 100px;
+    font-size: 0.8em;
+    letter-spacing: 1px;
+  }
   .comp1 {
     width: 500px;
     height: 80px;
