--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,4 +1,9 @@
 .main {
   padding: 1rem;
   text-align: center;
+  .init {
+    margin-top: 30px;
+    letter-spacing: 1.5px;
+    font-size: 0.8em;
+  }
 }
